--- a/index.html
+++ b/index.html
@@ -11,33 +11,47 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-{breakpoint}-auto">
+        <form type="text" placeholder="." onsubmit="app.controllers.carController.addCar(event)">
+          <label for="make">Make</label>
+          <input type="text" name="make" placeholder="Make" required>
+          <input type="text" name="model" placeholder="Model" required>
+          <input type="number" name="year" placeholder="Year" value="2000" required>
+          <input type="text" name="price" placeholder="Price" required>
+          <input type="text" name="color" placeholder="Color" required>
+          <input type="url" name="imgUrl" src="https://placehold.it/200x200" placeholder="https://placehold.it/200x200" required>
+          <button type="submit">Add Car</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <form input class="form-control " type="text" placeholder="." onsubmit="app.controllers.homeController.addHome(event)">
+        <label for="bedrooms">Bedrooms</label>
+        <input type="text" name="bedrooms" placeholder="bedrooms" required>
+        <input type="text" name="bathrooms" placeholder="bathrooms" required>
+        <input type="number" name="year" placeholder="Year" value="1970" required>
+        <input type="text" name="price" placeholder="Price" value="100000" required>
+        <input type="url" name="imgUrl" placeholder="Image Link" required>
+        <button type="submit">Add Home</button>
+    </div>
+  </div>
 
-  <form onsubmit="app.controllers.carController.addCar(event)">
-    <label for="make">Make</label>
-    <input type="text" name="make" placeholder="Make" required>
-    <input type="text" name="model" placeholder="Model" required>
-    <input type="number" name="year" placeholder="Year" value="2000" required>
-    <input type="text" name="price" placeholder="Price" required>
-    <input type="text" name="color" placeholder="Color" required>
-    <input type="url" name="imgUrl" src="https://placehold.it/200x200" placeholder="https://placehold.it/200x200" required>
-    <button type="submit">Add Car</button>
-  </form>
-  <form onsubmit="app.controllers.homeController.addHome(event)">
-    <label for="bedrooms">Bedrooms</label>
-    <input type="text" name="bedrooms" placeholder="bedrooms" required>
-    <input type="text" name="bathrooms" placeholder="bathrooms" required>
-    <input type="number" name="year" placeholder="Year" value="1970" required>
-    <input type="text" name="price" placeholder="Price" value="100000" required>
-    <input type="url" name="imgUrl" placeholder="Image Link" required>
-    <button type="submit">Add Home</button>
-  </form>
-  <form onsubmit="app.controllers.jobsController.addJob(event)">
-    <label for="title">Title</label>
-    <input type="text" name="title" placeholder="title" required>
-    <input type="text" name="salary" placeholder="salary" required>
-    <input type="text" name="yearsEdReq" placeholder="5" required>
+  <div class="row">
+    <div class="col-md-12">
+      </form>
+      <form input class="form-control " type="text" placeholder="." onsubmit="app.controllers.jobsController.addJob(event)">
+        <label for="title">Title</label>
+        <input type="text" name="title" placeholder="title" required>
+        <input type="text" name="salary" placeholder="salary" required>
+        <input type="text" name="yearsEdReq" placeholder="5" required>
+        <button type="submit">Add Job</button>
+    </div>
+  </div>
 
-    <button type="submit">Add Job</button>
   </form>
 
   <div class="container">
